--- a/storefront-site/.env.example
+++ b/storefront-site/.env.example
@@ -2,6 +2,6 @@ MYSQL_HOST=localhost
 MYSQL_DATABASE=storefront
 MYSQL_PORT=3306
 MYSQL_USERNAME=
-MYSQL_PASSWORD=
+MYSQL_PASSWORD= 
 JWT_SECRET=
-JWT_EXPIRE_TIME=2592000
+JWT_EXPIRE_TIME=
